refactor(driver): replace System.out with logger and improve structured logging
- Replace System.out.println/print with slf4j logger calls in S7/PLC
  driver (Nodave, S7BaseConnection, PDU, PLCinterface, S7Connection)
- Add structured log messages with protocol, deviceId, and operation
  context to modbus-tcp, mqtt, opc-ua, opc-da, and virtual drivers
- Add null checks and guard clauses in Netty message handlers
- Add keystore lifecycle logging in OPC-UA KeyLoader

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>